--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@
     <p3>Graybill, Andrew R., and Benjamin H. Johnson. “YO ERA INDÍGENA: Race Modernity, and the Transformational of Transnational Labor.” In Defiant Braceros, 36-37. Chapel Hill, NC: University of North Carolina Press, 2016.</p3>
     <br>
     <br>
+    <h3>Because braceros who left for the United States with pantalones de manta returned wearing the newest American apparel.</h3>
+     <br>
+    <br>
         <video controls loop autoplay>
   <source src="yo%20era.mp4" type="video/mp4" autoplay loop>
   Your browser does not support the video tag.
