--- a/index.html
+++ b/index.html
@@ -164,7 +164,6 @@
     <br>
         <video controls loop autoplay>
   <source src="yo%20era.mp4" type="video/mp4" autoplay loop>
-  Your browser does not support the video tag.
 </video>
         </div>
     </div>
@@ -188,6 +187,9 @@
     <p1>“There (in a textile maquiladora) I left part of my kidneys and my eyes,” Norma Iglesias quotes a Tijuana resident. “I never earned a fixed salary, they paid me by the piece… but the dresses we made were precious! They sold them in the most exclusive shops in the United States and they cost $200 to $300 dollars. And us? We earned forty-five pesos (about $4 USD) for each dress we made. Incredible!”</p1>
     <br>
     <br>
+    <h3>I never earned a fixed salary, they paid me by the piece… but the dresses we made were precious! They sold them in the most exclusive shops in the United States and they cost $200 to $300 dollars. And us? We earned forty-five pesos (about $4 USD) for each dress we made. Incredible!” </h3>
+    <br>
+    <br>
     <p1>Although Mexican state and city government officials welcomed the employment that the maquiladoras promised, they were not equipped to handle the demands that both the new industries and their employees placed on community facilities. Many of the places in which the newcomers lived lacked water, electricity, sanition. Barren fields filled with shanties; broken-down buses served as residences. Two, three, and more families shared cramped quarters in which they had to sleep in shifts. Newly arrived workers scrambled to find what had been garages, chicken coops, and sheds in which to live.</p1>
     <br>
     <br>
@@ -200,7 +202,10 @@
     <p3>Stout, Robert Joe. “A Place to Work, A Place to Live: Changing Worlds”. In Why Immigrants Come to America; Braceros, Indocumentados, and the Migra, 23-28. Westport, CT: Praeger Publications, 2008.</p3>
     </div>
     <div class="article7">
-    <img src="dollar.gif">
+    <img src="dollar.gif">    
+     <video controls loop autoplay>
+  <source src="maquiladoras.mp4" type="video/mp4" autoplay loop>
+        </video>
     </div>
     </div>
     <script>var coll = document.getElementsByClassName("collapsible");
