--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header> Neighbors</header>
 <button class="collapsible"><h2>Artist Statement</h2></button>
 <div class="content">
-<p1>Neighbors is a collection of art objects and textiles that explores the complicated labor relationship between the US and Mexico. By using different materials to construct cloth, I intend to create analogies and stories rooted in the participation of Mexicans in the US economy and how the inter-twining of the economies impact both sides. In the current political climate, I found the urge to break down the history and the system in which I am about to participate.</p1>
+<p1>Neighbors/Breadwinners is a collection of art objects and textiles that explores the complicated labor relationship between the US and Mexico. By using different materials to construct cloth, I intend to create analogies and stories rooted in the participation of Mexicans in the US economy and how the inter-twining of the economies impact both sides. In the current political climate, I found the urge to break down the history and the system in which I am about to participate.</p1>
 <br>
 <br>
 <p1>As I researched the origins of illegal and legal migration for economic reasons, I went into the historical archives of New York’s libraries to find out more about migration movements of Mexicans to America. Thus, I discovered legal migratory programs, which included promised wages and examples of an interpenetrant relationship. Some working programs such as the Braceros during the World Wars, excluded women due to the physical nature of the labor. On the other hand, the Maquiladoras program in the textile factories of border cities is mainly characterized by female labor. The two programs share the characteristic of being labor-intensive and not so well paid.</p1>
