--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header> Neighbors</header>
 <button class="collapsible"><h2>Artist Statement</h2></button>
 <div class="content">
-<p1>Neighbors/Breadwinners is a collection of art objects and textiles that explores the complicated labor relationship between the US and Mexico. By using different materials to construct cloth, I intend to create analogies and stories rooted in the participation of Mexicans in the US economy and how the inter-twining of the economies impact both sides. In the current political climate, I found the urge to break down the history and the system in which I am about to participate.</p1>
+<n0>01</n0><p1>Neighbors/Breadwinners is a collection of art objects and textiles that explores the complicated labor relationship between the US and Mexico. By using different materials to construct cloth, I intend to create analogies and stories rooted in the participation of Mexicans in the US economy and how the inter-twining of the economies impact both sides. In the current political climate, I found the urge to break down the history and the system in which I am about to participate.</p1>
 <br>
 <br>
 <p1>As I researched the origins of illegal and legal migration for economic reasons, I went into the historical archives of New York’s libraries to find out more about migration movements of Mexicans to America. Thus, I discovered legal migratory programs, which included promised wages and examples of an interpenetrant relationship. Some working programs such as the Braceros during the World Wars, excluded women due to the physical nature of the labor. On the other hand, the Maquiladoras program in the textile factories of border cities is mainly characterized by female labor. The two programs share the characteristic of being labor-intensive and not so well paid.</p1>
@@ -28,7 +28,7 @@
 <br>
 </div>
     <div class="article1">
-    <n1>01</n1><h1>México y Estados Unidos: Relaciones de Desigualdad</h1> 
+    <n1>02</n1><h1>México y Estados Unidos: Relaciones de Desigualdad</h1> 
     <p1>“No existe un país en el hemisferio occidental, ni en cualquier otra parte, que afecte tanto a Estados Unidos como México. Ningún otro país (incluso Canadá) recibe una influencia tan fuete de Estados Unidos como nuestro vecino del sur. Es posible que no exista una relación bilateral más compleja en el mundo.</p1>
     <br>
     <br>
@@ -53,7 +53,7 @@
         </div>
 <div class="articles">
 <div class="article2">
-    <n2>02</n2><h1>The Cultural Politics of the Uniform</h1> \
+    <n2>03</n2><h1>The Cultural Politics of the Uniform</h1> \
     <p1>Uniforms are intriguing. Uniforms are all about control, not only of the social self but also of the inner self and its formation. Uniforms send out mixed messages—some of these are obvious but others less so. Often it is those other subliminal messages that make them so intriguing. Those mixed messages are a combination of “not” statements (rules of wearing and not wearing that are often unstated or only partially stated—or arbitrarily applied) and transgressive messages. Rules about uniforms are highly detailed and fastidious. Wearing a uniform properly—under- standing and obeying rules about the uniform-in-practice—turning the garments into communicative statements—is more important than the items of clothing and decoration themselves. </p1>
     <br>
     <br>
@@ -79,7 +79,7 @@
      </div>
 <div class="article3">
     <img src="01.gif">
-    <n3>03</n3><h1>Mexican Faces, American Dreams </h1>    
+    <n3>04</n3><h1>Mexican Faces, American Dreams </h1>    
     <p1>The border separating the United States and Mexico meanders for 1,933 miles from the little Gulf port of Brownsville to the sprawling city of Tijuana and the suburbs of San Diego that nestle against it. Until well into this century, this frontier was unmarked, unnoticed, and unpatrolled by anything except stray livestock and vultures. Thousands of Mexican citizens fled the revolution that began in that country in 1910, creating a cheap labor pool throughout the U.S. Southwest. During World War I, the United States suspended literacy tests and granted legal status to Mexican workers as long as they stayed with the employer who hired them. Police in the cities that straddled the border often exchanged wrongdoers guilty of drunkenness or petty crimes. Even legal deportations were handled by local authorities until the Border Patrol was formed in 1924. </p1>
     <br>
     <br>
@@ -106,7 +106,7 @@
         </div>
     <div class="articles4">
 <div class="article4">
-    <n5>04</n5><h1>The Bracero as a Different Mexican</h1> 
+    <n5>06</n5><h1>The Bracero as a Different Mexican</h1> 
     <p1>The braceros seemed, at least for the time being, the perfect Mexicans, perpetually referred to as “Good Neighbors”. Indeed, it was said that their presence was changing, for the better, the attitude of the dominant community toward the resident Mexican community. A spokesperson for an organization working to better the condition of immigrants in the United States lauded the bracero program, contending that the system is working so successfully in the various states which are employing Mexican nationals that many people advocate permanent development of this system for American migrant laborers when the war is over.</p1>
     <br>
     <br>
@@ -171,7 +171,7 @@
         
     <div class="articles">
     <div class="article6">
-    <n6>06</n6><h1>Maquiladoras in Mexican Border Cities</h1>
+    <n6>08</n6><h1>Maquiladoras in Mexican Border Cities</h1>
     <p1>The bracero program agreement limited participation to farm workers and seasonal sugar factory employees. But non-braceros, the majority of them indocumentados began to discover that many small industries and sbusinesses – furniture makers, garment manufacturers, tanneries – were willing to hire temporary workers. This opened the doors to wider and less-defined migration. Women were wanted as seamstresses, housecleaners, nannies, men for all kinds of basic manual labor. The wags were paid to them far exceeded what these immigrants could earn in Mexico. Surveys taken during the late 1960s and early 1970s indicate that nearly two-thirds of immigrant undocumented workers had been employed before they left their places of origin. The border, after the Operation Wetback crackdowns during the Korean War, had become realtively porous; short-term visitor visas were easy to obtain and many construction firms, private contractors, and manufacturers in California and Texas hired by the day or week in order to cut down on employee overhead.</p1>
     <br>
     <br>
