--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
 <header> Neighbors</header>
-<p1><button class="collapsible"><n0>01</n0><h2>Artist Statement</h2></button>
+<p1><button class="collapsible"><n0>01</n0><h2>Artist Statement</h2><h4>by David Canedo Rivas</h4></button>
 <div class="content">
 Neighbors/Breadwinners is a collection of art objects and textiles that explores the complicated labor relationship between the US and Mexico. By using different materials to construct cloth, I intend to create analogies and stories rooted in the participation of Mexicans in the US economy and how the inter-twining of the economies impact both sides. In the current political climate, I found the urge to break down the history and the system in which I am about to participate.</p1>
 <br>
